--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
