--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "@mui/material": "^5.13.7",
     "@mui/x-date-pickers": "^6.10.1",
     "@types/react-datepicker": "^4.11.2",
-    "@types/react-input-mask": "^3.0.2",
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "cpf-cnpj-validator": "^1.0.3",
     "dayjs": "^1.11.9",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
-    "react-input-mask": "^2.0.4",
+    "react-imask": "^7.1.3",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
