--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-imask": "^7.1.3",
+    "react-number-format": "^5.3.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
